# tree-sitter-scl

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  setup.sh  test.scl  tree-sitter.json
bindings/go/: binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_scl/: __init__.py
bindings/rust/: lib.rs
bindings/swift/TreeSitterSclTests/: TreeSitterSclTests.swift
queries/: folds.scm  highlights.scm  indents.scm  injections.scm  locals.scm  tags.scm
queries/scl/: highlights.scm  indents.scm  locals.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: advanced_examples.scl  advanced_examples.txt  attributes_and_regions_test.txt  bit_operations_test.txt  comments_test.txt  complex_string_test.txt  comprehensive_test.txt  data_conversion_test.txt  enhanced_math_functions_test.txt  examples.txt  extended_features.txt  math_functions_test.txt  quote_test.txt  time_literals_test.txt
test/highlight/: builtin_functions_test.scl  complete_test.scl  data_conversion_test.scl  enhanced_math_functions_test.scl  extended_test.scl  string_functions_test.scl  test.scl
