[package]
name = "tree-sitter-scl"
description = "Siemens SCL grammar for tree-sitter"
version = "0.0.1"
keywords = ["incremental", "parsing", "scl"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/krikva/tree-sitter-scl"
edition = "2025"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0"
